--- a/tests/templates/index-button.twig
+++ b/tests/templates/index-button.twig
@@ -1,1 +1,3 @@
 {% button with {class:'bg-blue-600'} %} test {% endbutton %}
+{% simpleButton with {class:'bg-blue-600'} %} test {% endsimpleButton %}
+{% simpleBtn with {class:'bg-blue-600'} %} test {% endsimpleBtn %}
