Add new setup class

--- a/tests/templates/components/simple-button/primary.twig
+++ b/tests/templates/components/simple-button/primary.twig
@@ -1,1 +1,1 @@
-<button {{ attributes.merge({ class: 'bg-blue-800 rounded' })|raw }}>{{ slot }}</button>
+<button {{ attributes.merge({ class: 'bg-blue-800 rounded' }) }}>{{ slot }}</button>
