--- a/tests/templates/components/simple_button.twig
+++ b/tests/templates/components/simple_button.twig
@@ -1,1 +1,1 @@
-<button {{ attributes.merge({ class: 'text-white' })|raw }}>{{ slot }}</button>
+<button {{ attributes.merge({ class: 'text-white' }) }}>{{ slot }}</button>
