Add variable this as component

--- a/tests/templates/components/simple_alert.twig
+++ b/tests/templates/components/simple_alert.twig
@@ -1,1 +1,1 @@
-<div>{{type}}{{message}}</div>
+<div>{{type}}{{message}}{{this.setMessage('test')}}{{message}}{{this.counter()}}{{this.counter()}}</div>
